k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/info
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080

      - path: /api/v1/Healthz
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
